--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,7 @@
 ---
+// imports
+import { Image } from "astro:assets";
+// variables
 const mainColor = "#F38181";
 const backgroundImageUrl = `https://source.unsplash.com/random/?worried,girl`;
 ---
@@ -8,8 +11,8 @@ const backgroundImageUrl = `https://source.unsplash.com/random/?worried,girl`;
   <nav>
     <div class="logo">
       <picture>
-        <source srcset="https://via.placeholder.com/150" media="(min-width: 768px)">
-        <img src="https://via.placeholder.com/100" alt="logo">
+        <source srcset="../../public/logo-color.svg" media="(min-width: 768px)">
+        <img src="../../public/logo-color.svg" alt="logo">
       </picture>
     </div>
 
@@ -37,9 +40,13 @@ const backgroundImageUrl = `https://source.unsplash.com/random/?worried,girl`;
     list-style: none;
   }
 
+  picture {
+    height: 120px;
+    width: 300px;
+  }
+
   header {
-    
-    
+  
     width: 100%;
     height: 300px;
     background-size: cover;
