--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -104,7 +104,7 @@ const { title } = Astro.props;
   }
 
   html {
-    font-family: Menlo, sans-serif;
+    font-family: Roboto, sans-serif;
     background: #13151a;
     background-size: 224px;
   }
