--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,10 @@
 ---
-// imports
+// astro imports
 import { Image } from "astro:assets";
+
+// components
+import HeroText from "./HeroText.astro";
+
 // variables
 const mainColor = "#F38181";
 const backgroundImageUrl = `https://source.unsplash.com/random/?worried,girl`;
@@ -13,10 +17,10 @@ const backgroundImageUrl = `https://source.unsplash.com/random/?worried,girl`;
         <a href="/">
           <picture>
             <source
-              srcset="../../public/logo-color.svg"
+              srcset="../../logo-color.svg"
               media="(min-width: 768px)"
             />
-            <img src="../../public/logo-color.svg" alt="Logo" />
+            <img src="../../logo-color.svg" alt="Logo" />
           </picture>
         </a>
       </div>
@@ -30,6 +34,8 @@ const backgroundImageUrl = `https://source.unsplash.com/random/?worried,girl`;
         <li><a href="#">Kontakt</a></li>
       </ul>
     </nav>
+
+    <HeroText />
   </div>
 </header>
 
@@ -52,6 +58,16 @@ const backgroundImageUrl = `https://source.unsplash.com/random/?worried,girl`;
   ul {
     z-index: 20;
     margin-top: 15px;
+
+    li {
+      a {
+        transition: 0.2s;
+        &:hover {
+          color: var(--mainColor)
+
+        }
+      }
+    }
   }
 
   picture {
@@ -61,9 +77,9 @@ const backgroundImageUrl = `https://source.unsplash.com/random/?worried,girl`;
 
   header {
     width: 100%;
-    height: 300px;
+    height: 100vh;
     background-size: cover;
-    background-position: center;
+    background-position: 80% 50%;
     padding: 15px;
     position: relative;
 
@@ -80,7 +96,7 @@ const backgroundImageUrl = `https://source.unsplash.com/random/?worried,girl`;
     width: 100%;
     height: inherit;
     z-index: 10;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.4);
   }
 
   nav {
