--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,8 +17,9 @@ import SectionHeading from "../components/SectionHeading.astro";
   </Section>
 </Layout>
 
-<style>
+<style is:global>
   body {
     background-color: #fff;
   }
+
 </style>
