--- a/src/components/HeroText.astro
+++ b/src/components/HeroText.astro
@@ -1,22 +1,38 @@
 ---
-
+const { primaryColor } = Astro.props;
 ---
 
-<div class="hero">
-  <h1>Neplanirana trudnoća?</h1>
-  <h1>Potrebna ti je podrška?</h1>
-  <h1>Na pravom si mestu.</h1>
+<div class="hero-text">
+  <h1>Neplanirana <span>trudnoća?</span></h1>
+  <h1>Potrebna ti je <span>podrška?</span></h1>
+  <h1>Na pravom si mestu</h1>
 </div>
 
-<style>
-
-  .hero {
+<style define:vars={{ primaryColor }}>
+  .hero-text {
     position: relative;
     z-index: 20;
-    margin-top: 4rem;
-    h1 {
-      color: #fff;
-      
+    margin-top: 8rem;
+  }
+
+  h1 {
+    font-size: 2.7rem;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-weight: 300;
+    color: #fff;
+
+    &:nth-child(2) {
+      font-size: 2.2rem;
+    }
+
+    &:last-child {
+      font-weight: 700;
+      color: var(--primaryColor);
+    }
+
+    span {
+      color: var(--primaryColor);
     }
   }
 </style>
