--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import { getImage } from "astro:assets";
-import faviconSrc from "../images/favicon.png";
-import faviconSvgSrc from "../images/favicon.svg";
+import faviconSrc from "../assets/favicon.png";
+import faviconSvgSrc from "../assets/favicon.svg";
 
 const appleTouchIcon = await getImage({
   src: faviconSrc,
@@ -31,11 +31,12 @@ const { title } = Astro.props;
     <link rel="icon" href="/favicon.ico" sizes="32x32" />
     <link rel="icon" href={faviconSvg.src} type="image/svg+xml" />
     <link rel="apple-touch-icon" href={appleTouchIcon.src} />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
       rel="stylesheet"
     />
     <meta name="generator" content={Astro.generator} />
@@ -110,7 +111,9 @@ const { title } = Astro.props;
   }
 
   html {
-    font-family: Roboto, sans-serif;
+    font-family:
+      Open Sans,
+      sans-serif;
     background: #13151a;
     background-size: 224px;
   }
