--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -36,7 +36,7 @@ const optimizedBackgroundImage = await getImage({
     </nav>
 
     <HeroText primaryColor={mainColor} />
-    <Button  primaryColor={mainColor}>
+    <Button primaryColor={mainColor} type={"primary"}>
       Pozovi nas
     </Button>
   </div>
