--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -1,22 +1,22 @@
 ---
-const { title, children } = Astro.props;
+const { title, backgroundColor = "#fff", textColor = "#000" } = Astro.props;
 ---
 
 <section>
   <div class="content-container">
     <div class="content">
       <h1>{title}</h1>
-      <p>
-        <slot />
-      </p>
+      <slot />
     </div>
   </div>
 </section>
 
-<style>
+<style define:vars={{backgroundColor, textColor}}>
+
   section {
     padding-top: 7rem;
     padding-bottom: 7rem;
+    background-color: var(--backgroundColor);
   }
 
   .content-container {
@@ -27,9 +27,10 @@ const { title, children } = Astro.props;
 
   .content {
     width: 60%;
-    
+
     p {
-      width: 70%;
+      margin-bottom: 20px;
+      color: var(--textColor);
     }
   }
 </style>
