--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,6 +51,15 @@ const mainColor = "#F38181";
       </p>
     </div>
   </Section>
+
+  <Section>
+    <div class="content-container">
+      <SectionHeading>Informacije</SectionHeading>
+      <p>
+        
+      </p>
+    </div>
+  </Section>
 </Layout>
 
 <style>
